--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
+    "franc": "^6.2.0",
     "geist": "^1.3.0",
+    "he": "^1.2.0",
+    "langs": "^2.0.0",
     "lucide-react": "^0.395.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.7",
@@ -75,6 +78,8 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "@types/eslint": "^8.56.2",
+    "@types/he": "^1.2.3",
+    "@types/langs": "^2.0.5",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
