--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "tailwind-merge": "^2.3.0",
     "tslog": "^4.9.3",
     "typewriter-effect": "^2.21.0",
+    "ws": "^8.17.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
@@ -83,8 +84,10 @@
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "bufferutil": "^4.0.8",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
