--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "posthog-js": "^1.141.4",
+    "posthog-node": "^4.0.1",
     "radash": "^12.1.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
