--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
@@ -34,6 +35,9 @@
     "@neondatabase/serverless": "^0.9.3",
     "@prisma/adapter-neon": "^5.15.0",
     "@prisma/client": "^5.15.1",
+    "@prismicio/client": "^7.6.0",
+    "@prismicio/next": "^1.6.0",
+    "@prismicio/react": "^2.8.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
@@ -79,6 +83,7 @@
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@slicemachine/adapter-next": "^0.3.42",
     "@tailwindcss/typography": "^0.5.13",
     "@types/eslint": "^8.56.2",
     "@types/he": "^1.2.3",
@@ -97,6 +102,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.15.1",
+    "slice-machine-ui": "^2.2.1",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.15.5",
