--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@prismicio/client": "^7.6.0",
     "@prismicio/next": "^1.6.0",
     "@prismicio/react": "^2.8.0",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
@@ -84,6 +85,7 @@
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.42",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.13",
     "@types/eslint": "^8.56.2",
     "@types/he": "^1.2.3",
