--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@prismicio/next": "^1.6.0",
     "@prismicio/react": "^2.8.0",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
@@ -107,7 +108,7 @@
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.15.5",
-    "typescript": "^5.4.2"
+    "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.34.0"
