--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "framer-motion": "^11.2.10",
     "franc": "^6.2.0",
     "geist": "^1.3.0",
+    "googleapis": "^140.0.1",
     "he": "^1.2.0",
     "langs": "^2.0.0",
     "lucide-react": "^0.395.0",
