--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.6.0",
+    "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@neondatabase/serverless": "^0.9.3",
     "@prisma/adapter-neon": "^5.15.0",
     "@prisma/client": "^5.15.1",
