--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "db:migrate-rollback": "prisma migrate resolve --rolled-back",
     "db:migrate-reset-migrations": "rm -rf prisma/migrations && npm run db:migrate-reset && npm run db:migrate-dev && npm run dev",
     "dev": "next dev",
+    "email:dev": "email dev -d src/emails -p 5000",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
@@ -48,6 +49,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-email/components": "0.0.21",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.39.0",
     "@trpc/client": "next",
@@ -74,8 +76,10 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-dropzone": "^14.2.3",
+    "react-email": "2.1.5",
     "react-hook-form": "^7.52.0",
     "recharts": "^2.12.7",
+    "resend": "^3.4.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
