--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
-    "@headlessui/react": "^2.0.4",
+    "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.6.0",
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@neondatabase/serverless": "^0.9.3",
     "@prisma/adapter-neon": "^5.15.0",
     "@prisma/client": "^5.15.1",
+    "@prismicio/api-renderer": "^3.2.1",
     "@prismicio/client": "^7.6.0",
     "@prismicio/next": "^1.6.0",
     "@prismicio/react": "^2.8.0",
