--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "env:staging": "cp .env.staging .env",
     "env:prod": "cp .env.prod .env",
     "build": "next build",
-    "db:generate": "prisma migrate dev",
+    "db:generate": "prisma generate",
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
