--- a/package.json
+++ b/package.json
@@ -44,11 +44,14 @@
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "0.0.21",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -67,7 +70,7 @@
     "googleapis": "^140.0.1",
     "he": "^1.2.0",
     "langs": "^2.0.0",
-    "lucide-react": "^0.395.0",
+    "lucide-react": "^0.424.0",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
