--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,7 @@ scripts/migrateV2toV3.ts
 scripts/old_swipestats_profiles
 # Sentry Config File
 .env.sentry-build-plugin
+
+
+original_anonymized_file_last_500.json
+original_anonymized_file_last_500.csv
