--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.2.10",
     "franc": "^6.2.0",
     "geist": "^1.3.0",
