fix: git removed migration files

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ scripts/old_swipestats_profiles
 original_anonymized_file_last_500.json
 original_anonymized_file_last_500.csv
 db_dumps
+
+migrateV1toV3Ignored.ts
+migrateV2toV3Ignored.ts
