--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@neondatabase/serverless": "^0.9.3",
     "@prisma/adapter-neon": "^5.15.0",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.0.1",
     "@prismicio/api-renderer": "^3.2.1",
     "@prismicio/client": "^7.6.0",
     "@prismicio/next": "^1.6.0",
@@ -97,6 +97,7 @@
     "tailwind-merge": "^2.3.0",
     "tslog": "^4.9.3",
     "typewriter-effect": "^2.21.0",
+    "vaul": "^1.1.1",
     "ws": "^8.17.1",
     "zod": "^3.23.3"
   },
@@ -119,7 +120,7 @@
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "prisma": "^5.22.0",
+    "prisma": "^6.0.1",
     "slice-machine-ui": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
