--- a/.gitignore
+++ b/.gitignore
@@ -34,16 +34,20 @@ yarn-error.log*
 # local env files
 # do not commit any .env files to git, except for the .env.example file. https://create.t3.gg/en/usage/env-variables#using-environment-variables
 .env
-.env.local
+.env*.local
 .env.dev
 .env.prod
 .env.staging
+
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
+
+# idea files
+.idea
 
 # local migrations
 ssMigrations
@@ -60,3 +64,6 @@ db_dumps
 
 migrateV1toV3Ignored.ts
 migrateV2toV3Ignored.ts
+
+
+fixtures
