--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/functions": "^2.0.0",
     "@vercel/speed-insights": "^1.0.12",
     "ai": "^4.1.46",
     "class-variance-authority": "^0.7.0",
