feat: contentSanitized migration

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "env:dev": "cp .env.dev .env",
     "env:staging": "cp .env.staging .env",
     "env:prod": "cp .env.prod .env",
-    "build": "next build",
+    "build": "next build && bun run db:migrate-deploy",
+    "build:next": "next build",
     "check": "next lint && tsc --noEmit",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
@@ -21,7 +22,7 @@
     "db:migrate-reset": "dotenv tsx scripts/migrate-reset.ts",
     "db:migrate-dev": "dotenv tsx scripts/migrate-dev.ts",
     "db:migrate-dev-draft": "prisma migrate dev --create-only",
-    "db:migrate-deploy": "tsx scripts/migrate-deploy.ts",
+    "db:migrate-deploy": "bun scripts/migrate-deploy.ts",
     "db:migrate-rollback": "prisma migrate resolve --rolled-back",
     "db:migrate-reset-migrations": "rm -rf prisma/migrations && bun run db:migrate-reset && bun run db:migrate-dev && bun run dev",
     "postinstall": "prisma generate",
