--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "reset-cache": "rm -rf .next && rm -rf node_modules && rm -rf package-lock.json && bun install"
   },
   "dependencies": {
+    "@ai-sdk/deepseek": "^0.1.12",
+    "@ai-sdk/openai": "^1.1.14",
+    "@ai-sdk/react": "^1.1.18",
     "@auth/prisma-adapter": "^1.6.0",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.3",
@@ -67,6 +70,7 @@
     "@trpc/server": "next",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "ai": "^4.1.46",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -82,6 +86,7 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "nuqs": "^2.2.3",
+    "papaparse": "^5.5.2",
     "posthog-js": "^1.141.4",
     "posthog-node": "^4.0.1",
     "radash": "^12.1.0",
@@ -101,11 +106,13 @@
     "typewriter-effect": "^2.21.0",
     "vaul": "^1.1.1",
     "ws": "^8.17.1",
-    "zod": "^3.23.3"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.43",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/bun": "^1.2.2",
+    "@types/papaparse": "^5.3.15",
     "@types/eslint": "^8.56.2",
     "@types/he": "^1.2.3",
     "@types/langs": "^2.0.5",
