--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@auth/prisma-adapter": "^2.7.2",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.3",
-    "@hookform/resolvers": "^3.6.0",
+    "@hookform/resolvers": "^5.1.1",
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@neondatabase/serverless": "^0.9.3",
     "@openpanel/nextjs": "^1.0.7",
@@ -51,16 +51,17 @@
     "@prismicio/client": "^7.6.0",
     "@prismicio/next": "^1.6.0",
     "@prismicio/react": "^2.8.0",
-    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.2.1",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
@@ -73,6 +74,7 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/blob": "^1.1.1",
     "@vercel/functions": "^2.0.0",
     "@vercel/speed-insights": "^1.0.12",
     "ai": "^4.1.46",
@@ -99,7 +101,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.2.3",
     "react-email": "2.1.5",
-    "react-hook-form": "^7.52.0",
+    "react-hook-form": "^7.58.1",
     "recharts": "^2.15.3",
     "resend": "^3.4.0",
     "server-only": "^0.0.1",
@@ -111,7 +113,7 @@
     "typewriter-effect": "^2.21.0",
     "vaul": "^1.1.1",
     "ws": "^8.17.1",
-    "zod": "^3.24.2"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.43",
