--- a/package.json
+++ b/package.json
@@ -57,10 +57,12 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -81,6 +83,8 @@
     "ai": "^4.1.46",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "country-region-data": "^3.1.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.2.10",
@@ -88,6 +92,8 @@
     "geist": "^1.3.0",
     "googleapis": "^140.0.1",
     "he": "^1.2.0",
+    "heic-to": "^1.1.14",
+    "jszip": "^3.10.1",
     "langs": "^2.0.0",
     "lucide-react": "^0.424.0",
     "next": "^15.2.2",
@@ -99,6 +105,7 @@
     "posthog-node": "^4.10.1",
     "radash": "^12.1.0",
     "react": "^19.0.0",
+    "react-circle-flags": "^0.0.23",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.2.3",
     "react-email": "2.1.5",
@@ -120,11 +127,12 @@
     "@slicemachine/adapter-next": "^0.3.43",
     "@tailwindcss/typography": "^0.5.13",
     "@types/bun": "^1.2.2",
-    "@types/papaparse": "^5.3.15",
     "@types/eslint": "^8.56.10",
     "@types/he": "^1.2.3",
+    "@types/jszip": "^3.4.1",
     "@types/langs": "^2.0.5",
     "@types/node": "^20.14.10",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/ws": "^8.5.10",
