--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "geist": "^1.3.0",
     "googleapis": "^140.0.1",
     "he": "^1.2.0",
+    "jszip": "^3.10.1",
     "langs": "^2.0.0",
     "lucide-react": "^0.424.0",
     "next": "^15.2.2",
@@ -117,11 +118,12 @@
     "@slicemachine/adapter-next": "^0.3.43",
     "@tailwindcss/typography": "^0.5.13",
     "@types/bun": "^1.2.2",
-    "@types/papaparse": "^5.3.15",
     "@types/eslint": "^8.56.10",
     "@types/he": "^1.2.3",
+    "@types/jszip": "^3.4.1",
     "@types/langs": "^2.0.5",
     "@types/node": "^20.14.10",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/ws": "^8.5.10",
